--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@
 back/esquelet-BotigaInformatica/esquelet-BotigaInformatica.iml
 back/esquelet-BotigaInformatica/src/main/resources/application.properties
 *.properties
+public/esquelet-BotigaInformatica/src/main/resources/application.properties
