--- a/public/PCEconomic/pom.xml
+++ b/public/PCEconomic/pom.xml
@@ -13,6 +13,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>esquelet-BotigaInformatica</name>
     <description>esquelet-BotigaInformatica</description>
+    <packaging>war</packaging>
     <properties>
         <java.version>17</java.version>
     </properties>
