--- a/public/PCEconomic/pom.xml
+++ b/public/PCEconomic/pom.xml
@@ -67,6 +67,11 @@
             <artifactId>spring-boot-starter-tomcat</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+            <version>3.1.1.RELEASE</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${artifactId}</finalName>
