--- a/public/PCEconomic/pom.xml
+++ b/public/PCEconomic/pom.xml
@@ -58,6 +58,10 @@
             <artifactId>thymeleaf</artifactId>
             <version>3.1.1.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${artifactId}</finalName>
