--- a/public/PCEconomic/pom.xml
+++ b/public/PCEconomic/pom.xml
@@ -62,6 +62,10 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${artifactId}</finalName>
