--- a/public/PCEconomic/pom.xml
+++ b/public/PCEconomic/pom.xml
@@ -8,16 +8,14 @@
         <version>3.0.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>cat.iesmanacor.projecte</groupId>
+    <groupId>me.pceconomic.shop</groupId>
     <artifactId>PCEconomic</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.1-SNAPSHOT</version>
     <name>PCEconomic</name>
     <description>Botiga de components informatics</description>
-    <packaging>war</packaging>
     <properties>
         <java.version>17</java.version>
     </properties>
-
 
     <dependencies>
         <dependency>
