--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -1,6 +1,5 @@
-version: '4.12'
+version: "4.12"
 services:
-
   mysql:
     image: mysql:5.7
     volumes:
@@ -19,10 +18,12 @@ services:
     build:
       context: ./dockerfile
       dockerfile: Dockerfile
-    command: "php artisan serve --host 0.0.0.0"
+    command: sh -c "composer install && php artisan serve --host 0.0.0.0"
     ports:
       - 80:8000
     expose:
       - 80
+    environment:
+      - COMPOSER_ALLOW_SUPERUSER=1
     volumes:
       - ./laravel:/home/laravel
