--- a/public/PCEconomic/pom.xml
+++ b/public/PCEconomic/pom.xml
@@ -118,7 +118,11 @@
             <artifactId>google-cloud-translate</artifactId>
             <version>2.11.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.github.librepdf</groupId>
+            <artifactId>openpdf</artifactId>
+            <version>1.3.30</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${artifactId}</finalName>
