--- a/public/PCEconomic/pom.xml
+++ b/public/PCEconomic/pom.xml
@@ -123,6 +123,39 @@
             <artifactId>openpdf</artifactId>
             <version>1.3.30</version>
         </dependency>
+
+        <dependency>
+            <groupId>sis.redsys</groupId>
+            <artifactId>api</artifactId>
+            <version>1.0.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/apiSha256.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>sis.redsys</groupId>
+            <artifactId>jdkon</artifactId>
+            <version>1.0.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/bcprov-jdk15on-1.4.7.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>sis.redsys</groupId>
+            <artifactId>commons</artifactId>
+            <version>1.0.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/commons-codec-1.3.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>sis.redsys</groupId>
+            <artifactId>json</artifactId>
+            <version>1.0.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/org.json.jar</systemPath>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>${artifactId}</finalName>
