--- a/private/docker-compose.yml
+++ b/private/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     volumes:
       - ./quasar:/app
     ports:
-      - 8080:8080
+      - 80:8080
+    expose:
+      - 80
     command: sh -c "npm install && quasar dev"
     tty: true
