feat: changed all style tags to sass classes

--- a/public/PCEconomic/src/frontend/package.json
+++ b/public/PCEconomic/src/frontend/package.json
@@ -9,11 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^5.2.2"
+    "bootstrap": "^5.2.2",
+    "gulp-clean-css": "^4.3.0"
   },
   "devDependencies": {
-    "gulp": "^4.0.2", 
-    "gulp-sass": "^5.1.0", 
+    "gulp": "^4.0.2",
+    "gulp-sass": "^5.1.0",
     "sass": "^1.32.13"
   }
 }
