--- a/public/PCEconomic/src/frontend/package.json
+++ b/public/PCEconomic/src/frontend/package.json
@@ -10,11 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.2.2",
-    "gulp-clean-css": "^4.3.0"
+    "gulp-clean-css": "^4.3.0",
+    "workbox-window": "^6.5.4"
   },
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-sass": "^5.1.0",
-    "sass": "^1.32.13"
+    "sass": "^1.32.13",
+    "workbox-build": "^6.5.4",
+    "workbox-cli": "^6.5.4",
+    "workbox-webpack-plugin": "^6.5.4"
   }
 }
