--- a/private/quasar/.gitignore
+++ b/private/quasar/.gitignore
@@ -5,6 +5,7 @@ node_modules
 # Quasar core related directories
 .quasar
 /dist
+.env.dev.sergi
 
 # Cordova related directories and files
 /src-cordova/node_modules
