--- a/private/quasar/package.json
+++ b/private/quasar/package.json
@@ -12,6 +12,7 @@
     "@quasar/extras": "^1.0.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "jspdf": "^2.5.1",
     "process": "^0.11.10",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
