--- a/private/quasar/package.json
+++ b/private/quasar/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "process": "^0.11.10",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
